Delete proofs after checking

--- a/benchmarks/chess-data/Makefile
+++ b/benchmarks/chess-data/Makefile
@@ -6,21 +6,14 @@ GENERATOR = $(INTERP) ../chess.py
 SOLVER = $(INTERP) ../../prototype/solver.py
 CHECKER = ../../booleforce-1.3/tracecheck
 
-nq: chess-$(N).proof
+q: chess-$(N).data
 
-q: chess-$(N)-DQ.proof
-
-chess-$(N).proof:
+chess-$(N).data:
 	$(GENERATOR) -n $(N) -r chess-$(N) | tee chess-$(N).data
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N).cnf -s chess-$(N).schedule \
 		-p chess-$(N).order -o chess-$(N).proof | tee -a chess-$(N).data
 	$(CHECKER) -v chess-$(N).proof | tee -a chess-$(N).data
-
-chess-$(N)-DQ.proof:
-	$(GENERATOR) -Q -n $(N) -r chess-$(N)-DQ | tee chess-$(N)-DQ.data
-	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-DQ.cnf -s chess-$(N)-DQ.schedule \
-		-p chess-$(N)-DQ.order -o chess-$(N)-DQ.proof | tee -a chess-$(N)-DQ.data
-	$(CHECKER) -v chess-$(N)-DQ.proof | tee -a chess-$(N)-DQ.data
+	rm -f chess-$(N).proof
 
 clean:
 	rm -f *~
