Corrected statistics reporting

--- a/lrat/Makefile
+++ b/lrat/Makefile
@@ -1,7 +1,7 @@
 all: lrat-check
 
 lrat-check: lrat-check.c
-	gcc lrat-check.c -O2 -o lrat-check
+	gcc -g lrat-check.c -O2 -o lrat-check
 
 clean:
 	rm -f lrat-check
