Print less info; make cnf-only generation

--- a/benchmarks/chew-code/Makefile
+++ b/benchmarks/chew-code/Makefile
@@ -1,5 +1,11 @@
+all: parity parity-cnf
+
 parity: Source.cpp
-	g++ Source.cpp -std=c++11 -O2 -o parity
+	g++ Source.cpp -std=c++11 -g -O2 -o parity
+
+parity-cnf: Source.cpp
+	g++ Source.cpp -std=c++11 -g -O2 -DCNF_ONLY -o parity-cnf
+
 
 clean:
-	rm parity
+	rm -f parity parity-cnf
