Fixed LRAT generation

--- a/benchmarks/data-lrat/chess-data/Makefile
+++ b/benchmarks/data-lrat/chess-data/Makefile
@@ -20,36 +20,36 @@ b: chess-$(N)-bucket.data
 chess-$(N).data:
 	$(GENERATOR) -n $(N) -r chess-$(N) | tee chess-$(N).data
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N).cnf -s chess-$(N).schedule \
-		-p chess-$(N).order -o chess-$(N).lrat | tee -a chess-$(N).data
+		-p chess-$(N).order -O chess-$(N).lrat | tee -a chess-$(N).data
 	$(CHECKER) chess-$(N).cnf chess-$(N).lrat | tee -a chess-$(N).data
-	rm -f chess-$(N).lrat
+#	rm -f chess-$(N).lrat
 
 chess-$(N)-noquant.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-noquant | tee chess-$(N)-noquant.data
 	grep -v "q" chess-$(N)-noquant.schedule > chess-$(N)-noquant-stripped.schedule
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-noquant.cnf -s chess-$(N)-noquant-stripped.schedule \
-		-p chess-$(N)-noquant.order -o chess-$(N)-noquant.lrat | tee -a chess-$(N)-noquant.data
+		-p chess-$(N)-noquant.order -O chess-$(N)-noquant.lrat | tee -a chess-$(N)-noquant.data
 	$(CHECKER) -v chess-$(N)-noquant.lrat | tee -a chess-$(N)-noquant.data
 	rm -f chess-$(N)-noquant.lrat
 
 chess-$(N)-noschedule.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-noschedule | tee chess-$(N)-noschedule.data
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-noschedule.cnf \
-		-p chess-$(N)-noschedule.order -o chess-$(N)-noschedule.lrat | tee -a chess-$(N)-noschedule.data
+		-p chess-$(N)-noschedule.order -O chess-$(N)-noschedule.lrat | tee -a chess-$(N)-noschedule.data
 	$(CHECKER) -v chess-$(N)-noschedule.lrat | tee -a chess-$(N)-noschedule.data
 	rm -f chess-$(N)-noschedule.lrat
 
 chess-$(N)-linear.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-linear | tee chess-$(N)-linear.data
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-linear.cnf -s chess-$(N)-linear.schedule \
-		-p chess-$(N)-linear.order -o chess-$(N)-linear.lrat | tee -a chess-$(N)-linear.data
+		-p chess-$(N)-linear.order -O chess-$(N)-linear.lrat | tee -a chess-$(N)-linear.data
 	$(CHECKER) -v chess-$(N)-linear.lrat | tee -a chess-$(N)-linear.data
 	rm -f chess-$(N)-linear.lrat
 
 chess-$(N)-bucket.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-bucket | tee chess-$(N)-bucket.data
 	$(SOLVER) -b -v $(VLEVEL) -i chess-$(N)-bucket.cnf \
-		-p chess-$(N)-bucket.order -o chess-$(N)-bucket.lrat | tee -a chess-$(N)-bucket.data
+		-p chess-$(N)-bucket.order -O chess-$(N)-bucket.lrat | tee -a chess-$(N)-bucket.data
 	$(CHECKER) -v chess-$(N)-bucket.lrat | tee -a chess-$(N)-bucket.data
 	rm -f chess-$(N)-bucket.lrat
 
