--- a/benchmarks/data-lrat/chess-data/Makefile
+++ b/benchmarks/data-lrat/chess-data/Makefile
@@ -5,7 +5,7 @@ VLEVEL = 1
 GENERATOR = $(INTERP) ../../chess.py
 SOLVER = $(INTERP) ../../../prototype/solver.py
 CHECKER = ../../../lrat/lrat-check
-
+GRABBER = ../../grab_clauses.py
 
 q: chess-$(N).data
 
@@ -27,24 +27,28 @@ chess-$(N)-noquant.data:
 	grep -v "q" chess-$(N)-noquant.schedule > chess-$(N)-noquant-stripped.schedule
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-noquant.cnf -s chess-$(N)-noquant-stripped.schedule \
 		-p chess-$(N)-noquant.order -O chess-$(N)-noquant.lrat | tee -a chess-$(N)-noquant.data
-	$(CHECKER) -v chess-$(N)-noquant.lrat | tee -a chess-$(N)-noquant.data
+	$(CHECKER) chess-$(N)-noquant.cnf chess-$(N)-noquant.lrat | tee -a chess-$(N)-noquant.data
 	rm -f chess-$(N)-noquant.lrat
 
 chess-$(N)-noschedule.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-noschedule | tee chess-$(N)-noschedule.data
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-noschedule.cnf \
 		-p chess-$(N)-noschedule.order -O chess-$(N)-noschedule.lrat | tee -a chess-$(N)-noschedule.data
-	$(CHECKER) -v chess-$(N)-noschedule.lrat | tee -a chess-$(N)-noschedule.data
+	$(CHECKER) chess-$(N)-noschedule.cnf chess-$(N)-noschedule.lrat | tee -a chess-$(N)-noschedule.data
 	rm -f chess-$(N)-noschedule.lrat
 
 chess-$(N)-bucket.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-bucket | tee chess-$(N)-bucket.data
 	$(SOLVER) -b -v $(VLEVEL) -i chess-$(N)-bucket.cnf \
 		-p chess-$(N)-bucket.order -O chess-$(N)-bucket.lrat | tee -a chess-$(N)-bucket.data
-	$(CHECKER) -v chess-$(N)-bucket.lrat | tee -a chess-$(N)-bucket.data
+	$(CHECKER) chess-$(N)-bucket.cnf chess-$(N)-bucket.lrat | tee -a chess-$(N)-bucket.data
 	rm -f chess-$(N)-bucket.lrat
 
-
+data:
+	$(GRABBER) chess-???.data > chess-columnscan.csv
+	$(GRABBER) chess-*-bucket.data > chess-bucket.csv
+	$(GRABBER) chess-*-noquant.data > chess-noquant.csv
+	$(GRABBER) chess-*-noschedule.data > chess-noschedule.csv
 
 clean:
 	rm -f *~
