--- a/benchmarks/data-lrat/Makefile
+++ b/benchmarks/data-lrat/Makefile
@@ -2,4 +2,4 @@ data:
 	(cd chess-data; make data)
 	(cd chew-data; make data)
 	(cd pigeon-direct-data; make data)
-#	(cd pigeon-tseitin-data; make data)
+	(cd pigeon-tseitin-data; make data)
