--- a/benchmarks/data-lrat/Makefile
+++ b/benchmarks/data-lrat/Makefile
@@ -3,3 +3,4 @@ data:
 	(cd chew-data; make data)
 	(cd pigeon-direct-data; make data)
 	(cd pigeon-tseitin-data; make data)
+	(cd urquhart-li-data; make data)
