--- a/benchmarks/data-lrat/Makefile
+++ b/benchmarks/data-lrat/Makefile
@@ -4,3 +4,4 @@ data:
 	(cd pigeon-direct-data; make data)
 	(cd pigeon-tseitin-data; make data)
 	(cd urquhart-li-data; make data)
+	(cd urquhart-simon-data; make data)
