Code for processing binary data

--- a/pcaas/Makefile
+++ b/pcaas/Makefile
@@ -3,14 +3,11 @@ CFLAGS = -O0 -g
 
 all: lrat-check
 
-csapp-subset.o: csapp-subset.c csapp-subset.h
-	$(CC) $(CFLAGS) -c csapp-subset.c
-
-stream.o: stream.c stream.h csapp-subset.h
+stream.o: stream.c stream.h
 	$(CC) $(CFLAGS) -c stream.c
 
-translator: translator.c csapp-subset.o stream.o
-	$(CC) $(CFLAGS) -o translator translator.c csapp-subset.o stream.o
+translator: translator.c stream.o
+	$(CC) $(CFLAGS) -o translator translator.c stream.o
 
 lrat-check: lrat-check.c
 	gcc -g lrat-check.c -O2 -o lrat-check
