--- a/pcaas/Makefile
+++ b/pcaas/Makefile
@@ -1,17 +1,21 @@
 CC=gcc
-CFLAGS = -O0 -g
+CFLAGS = -O2 -g
 
-all: lrat-check
+all: lrat-check translator
 
 stream.o: stream.c stream.h
 	$(CC) $(CFLAGS) -c stream.c
 
+lrat.o: lrat.c stream.h
+	$(CC) $(CFLAGS) -c lrat.c
+
 translator: translator.c stream.o
 	$(CC) $(CFLAGS) -o translator translator.c stream.o
 
-lrat-check: lrat-check.c
-	gcc -g lrat-check.c -O2 -o lrat-check
+lrat-check: lrat-main.c stream.o lrat.o
+	$(CC) $(CFLAGS) lrat-main.c stream.o lrat.o -o lrat-check
 
 clean:
-	rm -f lrat-check
+	rm -f lrat-check translator *.o *~
+
 
