--- a/benchmarks/data-lrat/urquhart-simon-data/Makefile
+++ b/benchmarks/data-lrat/urquhart-simon-data/Makefile
@@ -8,8 +8,9 @@ SEED=1
 GENERATOR = ../../urquhart-simon-code/genurq
 RANDOMIZER = ../../randomizer.py
 SOLVER = $(INTERP) ../../../prototype/solver.py
-CHECKER = ../../../lrat/lrat-check
+CHECKER = ../../../pcaas/lrat-check
 GRABBER = ../../grab_clauses.py
+EXTENSION = lratb
 
 io: urquhart-simon-$(M)-$(SEED)-inputorder.data
 ro: urquhart-simon-$(M)-$(SEED)-randomorder.data
@@ -18,24 +19,24 @@ l: urquhart-simon-$(M)-$(SEED)-linear.data
 urquhart-simon-$(M)-$(SEED)-inputorder.data:
 	$(GENERATOR) $(M) $(SEED) > urquhart-simon-$(M)-$(SEED)-inputorder.cnf | tee urquhart-simon-$(M)-$(SEED)-inputorder.data
 	$(SOLVER) -v $(VLEVEL) -i urquhart-simon-$(M)-$(SEED)-inputorder.cnf -b \
-		-O urquhart-simon-$(M)-$(SEED)-inputorder.lrat | tee -a urquhart-simon-$(M)-$(SEED)-inputorder.data
-	$(CHECKER) urquhart-simon-$(M)-$(SEED)-inputorder.cnf urquhart-simon-$(M)-$(SEED)-inputorder.lrat | tee -a urquhart-simon-$(M)-$(SEED)-inputorder.data
-	rm -f urquhart-simon-$(M)-$(SEED)-inputorder.lrat
+		-o urquhart-simon-$(M)-$(SEED)-inputorder.$(EXTENSION) | tee -a urquhart-simon-$(M)-$(SEED)-inputorder.data
+	$(CHECKER) urquhart-simon-$(M)-$(SEED)-inputorder.cnf urquhart-simon-$(M)-$(SEED)-inputorder.$(EXTENSION) | tee -a urquhart-simon-$(M)-$(SEED)-inputorder.data
+	rm -f urquhart-simon-$(M)-$(SEED)-inputorder.$(EXTENSION)
 
 urquhart-simon-$(M)-$(SEED)-randomorder.data:
 	$(GENERATOR) $(M) $(SEED) > urquhart-simon-$(M)-$(SEED)-randomorder.cnf | tee urquhart-simon-$(M)-$(SEED)-randomorder.data
 	$(RANDOMIZER) urquhart-simon-$(M)-$(SEED)-randomorder.cnf $(SEED)
 	$(SOLVER) -v $(VLEVEL) -i urquhart-simon-$(M)-$(SEED)-randomorder.cnf -b -p urquhart-simon-$(M)-$(SEED)-randomorder.order \
-		-O urquhart-simon-$(M)-$(SEED)-randomorder.lrat | tee -a urquhart-simon-$(M)-$(SEED)-randomorder.data
-	$(CHECKER) urquhart-simon-$(M)-$(SEED)-randomorder.cnf urquhart-simon-$(M)-$(SEED)-randomorder.lrat | tee -a urquhart-simon-$(M)-$(SEED)-randomorder.data
-	rm -f urquhart-simon-$(M)-$(SEED)-randomorder.lrat
+		-o urquhart-simon-$(M)-$(SEED)-randomorder.$(EXTENSION) | tee -a urquhart-simon-$(M)-$(SEED)-randomorder.data
+	$(CHECKER) urquhart-simon-$(M)-$(SEED)-randomorder.cnf urquhart-simon-$(M)-$(SEED)-randomorder.$(EXTENSION) | tee -a urquhart-simon-$(M)-$(SEED)-randomorder.data
+	rm -f urquhart-simon-$(M)-$(SEED)-randomorder.$(EXTENSION)
 
 urquhart-simon-$(M)-$(SEED)-linear.data:
 	$(GENERATOR) $(M) $(SEED) > urquhart-simon-$(M)-$(SEED)-linear.cnf | tee urquhart-simon-$(M)-$(SEED)-linear.data
 	$(SOLVER) -v $(VLEVEL) -i urquhart-simon-$(M)-$(SEED)-linear.cnf \
-		-O urquhart-simon-$(M)-$(SEED)-linear.lrat | tee -a urquhart-simon-$(M)-$(SEED)-linear.data
-	$(CHECKER) urquhart-simon-$(M)-$(SEED)-linear.cnf urquhart-simon-$(M)-$(SEED)-linear.lrat | tee -a urquhart-simon-$(M)-$(SEED)-linear.data
-	rm -f urquhart-simon-$(M)-$(SEED)-linear.lrat
+		-o urquhart-simon-$(M)-$(SEED)-linear.$(EXTENSION) | tee -a urquhart-simon-$(M)-$(SEED)-linear.data
+	$(CHECKER) urquhart-simon-$(M)-$(SEED)-linear.cnf urquhart-simon-$(M)-$(SEED)-linear.$(EXTENSION) | tee -a urquhart-simon-$(M)-$(SEED)-linear.data
+	rm -f urquhart-simon-$(M)-$(SEED)-linear.$(EXTENSION)
 
 
 data:
@@ -45,4 +46,4 @@ clean:
 	rm -f *~
 
 superclean: clean
-	rm -f *.cnf *.lrat *.data *.order *.schedule
+	rm -f *.cnf *.lrat *.lratb *.data *.order *.schedule
