--- a/benchmarks/data-lrat/chess-data/Makefile
+++ b/benchmarks/data-lrat/chess-data/Makefile
@@ -4,10 +4,12 @@ VLEVEL = 1
 
 GENERATOR = $(INTERP) ../../chess.py
 SOLVER = $(INTERP) ../../../prototype/solver.py
-CHECKER = ../../../lrat/lrat-check
+CHECKER = ../../../pcaas/lrat-check
 GRABBER = ../../grab_clauses.py
+EXTENSION = lratb
 
-q: chess-$(N).data
+
+q: chess-$(N)-column.data
 
 nq: chess-$(N)-noquant.data
 
@@ -15,34 +17,34 @@ ns: chess-$(N)-noschedule.data
 
 b: chess-$(N)-bucket.data
 
-chess-$(N).data:
-	$(GENERATOR) -n $(N) -r chess-$(N) | tee chess-$(N).data
-	$(SOLVER) -v $(VLEVEL) -i chess-$(N).cnf -s chess-$(N).schedule \
-		-p chess-$(N).order -O chess-$(N).lrat | tee -a chess-$(N).data
-	$(CHECKER) chess-$(N).cnf chess-$(N).lrat | tee -a chess-$(N).data
-	rm -f chess-$(N).lrat
+chess-$(N)-column.data:
+	$(GENERATOR) -n $(N) -r chess-$(N)-column | tee chess-$(N)-column.data
+	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-column.cnf -s chess-$(N)-column.schedule \
+		-p chess-$(N)-column.order -o chess-$(N)-column.$(EXTENSION) | tee -a chess-$(N)-column.data
+	$(CHECKER) chess-$(N)-column.cnf chess-$(N)-column.$(EXTENSION) | tee -a chess-$(N)-column.data
+	rm -f chess-$(N)-column.$(EXTENSION)
 
 chess-$(N)-noquant.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-noquant | tee chess-$(N)-noquant.data
 	grep -v "q" chess-$(N)-noquant.schedule > chess-$(N)-noquant-stripped.schedule
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-noquant.cnf -s chess-$(N)-noquant-stripped.schedule \
-		-p chess-$(N)-noquant.order -O chess-$(N)-noquant.lrat | tee -a chess-$(N)-noquant.data
-	$(CHECKER) chess-$(N)-noquant.cnf chess-$(N)-noquant.lrat | tee -a chess-$(N)-noquant.data
-	rm -f chess-$(N)-noquant.lrat
+		-p chess-$(N)-noquant.order -o chess-$(N)-noquant.$(EXTENSION) | tee -a chess-$(N)-noquant.data
+	$(CHECKER) chess-$(N)-noquant.cnf chess-$(N)-noquant.$(EXTENSION) | tee -a chess-$(N)-noquant.data
+	rm -f chess-$(N)-noquant.$(EXTENSION)
 
 chess-$(N)-noschedule.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-noschedule | tee chess-$(N)-noschedule.data
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-noschedule.cnf \
-		-p chess-$(N)-noschedule.order -O chess-$(N)-noschedule.lrat | tee -a chess-$(N)-noschedule.data
-	$(CHECKER) chess-$(N)-noschedule.cnf chess-$(N)-noschedule.lrat | tee -a chess-$(N)-noschedule.data
-	rm -f chess-$(N)-noschedule.lrat
+		-p chess-$(N)-noschedule.order -o chess-$(N)-noschedule.$(EXTENSION) | tee -a chess-$(N)-noschedule.data
+	$(CHECKER) chess-$(N)-noschedule.cnf chess-$(N)-noschedule.$(EXTENSION) | tee -a chess-$(N)-noschedule.data
+	rm -f chess-$(N)-noschedule.$(EXTENSION)
 
 chess-$(N)-bucket.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-bucket | tee chess-$(N)-bucket.data
 	$(SOLVER) -b -v $(VLEVEL) -i chess-$(N)-bucket.cnf \
-		-p chess-$(N)-bucket.order -O chess-$(N)-bucket.lrat | tee -a chess-$(N)-bucket.data
-	$(CHECKER) chess-$(N)-bucket.cnf chess-$(N)-bucket.lrat | tee -a chess-$(N)-bucket.data
-	rm -f chess-$(N)-bucket.lrat
+		-p chess-$(N)-bucket.order -o chess-$(N)-bucket.$(EXTENSION) | tee -a chess-$(N)-bucket.data
+	$(CHECKER) chess-$(N)-bucket.cnf chess-$(N)-bucket.$(EXTENSION) | tee -a chess-$(N)-bucket.data
+	rm -f chess-$(N)-bucket.$(EXTENSION)
 
 data:
 	$(GRABBER) chess-???.data > chess-columnscan.csv
@@ -54,4 +56,4 @@ clean:
 	rm -f *~
 
 superclean: clean
-	rm -f *.cnf *.lrat *.data *.order *.schedule
+	rm -f *.cnf *.lrat *.lratb *.data *.order *.schedule
