Renamed files; Added ability to count solutions to BDD

--- a/benchmarks/data-lratA/chess-data/Makefile
+++ b/benchmarks/data-lratA/chess-data/Makefile
@@ -1,12 +1,12 @@
 INTERP = python3
 N = 10
-VLEVEL = 2
+VLEVEL = 1
 
 GENERATOR = $(INTERP) ../../chess.py
-SOLVER = $(INTERP) ../../../protoB/solver.py
+SOLVER = $(INTERP) ../../../prototype/solver.py
 CHECKER = ../../../pcaas/lrat-check
 GRABBER = ../../grab_clauses.py
-EXTENSION = lrat
+EXTENSION = lratb
 
 
 q: chess-$(N)-column.data
@@ -20,7 +20,7 @@ b: chess-$(N)-bucket.data
 chess-$(N)-column.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-column | tee chess-$(N)-column.data
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-column.cnf -s chess-$(N)-column.schedule \
-		-p chess-$(N)-column.order -o chess-$(N)-column.$(EXTENSION) 2>&1 | tee -a chess-$(N)-column.data
+		-p chess-$(N)-column.order -o chess-$(N)-column.$(EXTENSION) | tee -a chess-$(N)-column.data
 	$(CHECKER) chess-$(N)-column.cnf chess-$(N)-column.$(EXTENSION) | tee -a chess-$(N)-column.data
 	rm -f chess-$(N)-column.$(EXTENSION)
 
@@ -28,21 +28,21 @@ chess-$(N)-noquant.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-noquant | tee chess-$(N)-noquant.data
 	grep -v "q" chess-$(N)-noquant.schedule > chess-$(N)-noquant-stripped.schedule
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-noquant.cnf -s chess-$(N)-noquant-stripped.schedule \
-		-p chess-$(N)-noquant.order -o chess-$(N)-noquant.$(EXTENSION) 2>&1 | tee -a chess-$(N)-noquant.data
+		-p chess-$(N)-noquant.order -o chess-$(N)-noquant.$(EXTENSION) | tee -a chess-$(N)-noquant.data
 	$(CHECKER) chess-$(N)-noquant.cnf chess-$(N)-noquant.$(EXTENSION) | tee -a chess-$(N)-noquant.data
 	rm -f chess-$(N)-noquant.$(EXTENSION)
 
 chess-$(N)-noschedule.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-noschedule | tee chess-$(N)-noschedule.data
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-noschedule.cnf \
-		-p chess-$(N)-noschedule.order -o chess-$(N)-noschedule.$(EXTENSION) 2>&1 | tee -a chess-$(N)-noschedule.data
+		-p chess-$(N)-noschedule.order -o chess-$(N)-noschedule.$(EXTENSION) | tee -a chess-$(N)-noschedule.data
 	$(CHECKER) chess-$(N)-noschedule.cnf chess-$(N)-noschedule.$(EXTENSION) | tee -a chess-$(N)-noschedule.data
 	rm -f chess-$(N)-noschedule.$(EXTENSION)
 
 chess-$(N)-bucket.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-bucket | tee chess-$(N)-bucket.data
 	$(SOLVER) -b -v $(VLEVEL) -i chess-$(N)-bucket.cnf \
-		-p chess-$(N)-bucket.order -o chess-$(N)-bucket.$(EXTENSION) 2>&1 | tee -a chess-$(N)-bucket.data
+		-p chess-$(N)-bucket.order -o chess-$(N)-bucket.$(EXTENSION) | tee -a chess-$(N)-bucket.data
 	$(CHECKER) chess-$(N)-bucket.cnf chess-$(N)-bucket.$(EXTENSION) | tee -a chess-$(N)-bucket.data
 	rm -f chess-$(N)-bucket.$(EXTENSION)
 
