--- a/benchmarks/data-lratA/chew-data/Makefile
+++ b/benchmarks/data-lratA/chew-data/Makefile
@@ -6,7 +6,7 @@ SEED=123456
 FULLGENERATOR = ../../chew-code/parity
 GENERATOR = ../../chew-code/parity-cnf
 RANDOMIZER = ../../randomizer.py
-SOLVER = $(INTERP) ../../../protoB/solver.py
+SOLVER = $(INTERP) ../../../prototype/solver.py
 CHECKER = ../../../pcaas/lrat-check
 UPLOADER = ../../../pcaas/upload
 GRABBER = ../../grab_clauses.py
