--- a/pcaas/Makefile
+++ b/pcaas/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS = -O0 -g -Wall
 
-all: lrat-check translator lrat-server upload
+all: lrat-check translator lrat-server upload proof_b2t
 
 stream.o: stream.c stream.h
 	$(CC) $(CFLAGS) -c stream.c
@@ -11,6 +11,9 @@ lrat.o: lrat.c stream.h
 
 translator: translator.c stream.o
 	$(CC) $(CFLAGS) -o translator translator.c stream.o
+
+proof_b2t: proof_b2t.c stream.o
+	$(CC) $(CFLAGS) -o proof_b2t proof_b2t.c stream.o
 
 lrat-check: lrat-main.c stream.o lrat.o
 	$(CC) $(CFLAGS) lrat-main.c stream.o lrat.o -o lrat-check
@@ -22,6 +25,6 @@ upload: upload.c stream.o
 	$(CC) $(CFLAGS) upload.c stream.o -o upload
 
 clean:
-	rm -f lrat-check lrat-server translator upload *.o *~
+	rm -f lrat-check lrat-server translator proof_b2t upload *.o *~
 
 
